#
# Include Hooks
#

IF( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/profile" )
    MESSAGE(STATUS "Build profile hook.")
    ADD_SUBDIRECTORY(profile)
ENDIF()

IF( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/log" )
    ADD_SUBDIRECTORY(log)
ENDIF()

IF( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/dummy" )
    ADD_SUBDIRECTORY(dummy)
ENDIF()

