IF (DEV STREQUAL ON)
    SET(DUMMY_DEFAULT ON)
ELSE()
    SET(DUMMY_DEFAULT OFF)
ENDIF()
OPTION(DUMMY_HOOK "Build the dummy hook" ${DUMMY_DEFAULT})

IF ( NOT DUMMY_HOOK)
    ADD_LIBRARY(flexiblas_hook_dummy SHARED
        dummy_hook.c
        )

    IF (INTEGER8 STREQUAL ON)
        SET(EXTRA_FLAGS "-DBACKEND_INTEGER8")
    ELSE ()
        SET(EXTRA_FLAGS "")
    ENDIF()

    SET_TARGET_PROPERTIES(flexiblas_hook_dummy PROPERTIES COMPILE_FLAGS "${EXTRA_FLAGS}")
    TARGET_LINK_LIBRARIES(flexiblas_hook_dummy flexiblas)
    INSTALL(TARGETS flexiblas_hook_dummy LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${FLEXIBLAS_LIBRARY_DIR})
ENDIF()
